# push_swap

./: .gitignore  CMakeLists.txt  Makefile  README.md  author  checker  push_swap  test_push_swap.sh
docs/: push_swap.drawio
includes/: push_swap.h
libft/: .gitignore  Makefile  README.md
libft/get_next_line/: get_next_line.c  get_next_line_utils.c
libft/includes/: get_next_line.h  libft.h  printf.h
libft/printf/: README.md  ft_dprintf.c  ft_printf.c  real_printf.c
libft/printf/utils/: utils.c  utils_build.c  utils_itoa.c  utils_lst.c  utils_other.c  utils_str.c  utils_write.c
libft/printf/wrappers/: wrappers_char.c  wrappers_num.c
libft/printf/writers/: writer_c.c  writer_d.c  writer_p.c  (+3 more)
libft/srcs/: ft_atof.c  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strarrexists.c  ft_strarrfree.c  ft_strchr.c  ft_strcpy.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  (+10 more)
srcs/checker/: check.c  main.c
srcs/push_swap/: init_stack_ptr.c  main.c  push_swap.c  push_swap_large.c  push_swap_small.c
srcs/utils/: ft_atol.c  has_duplicates.c  load_stack.c  print_stack.c  valid_digits.c
tests/: CMakeLists.txt  test_ins.cpp  test_num.cpp  test_push_swap.cpp  test_utils.cpp
(+15 files in other folders)
